--- a/views/dashboard_page.ejs
+++ b/views/dashboard_page.ejs
@@ -24,9 +24,19 @@
 
     <main style="margin: 1em;">
       <h3>Dashboard</h3>
-        <div class="">
+        <div class="container text-left">
+          <div class="row">
+            <div class="col">
+              Camera 1
+            </div>
+            <div class="col">
+              Camera 2
+            </div>
+            <div class="col">
+              Camera 3
+            </div>
+          </div>
         </div>
-      </form>
     </main>
     <!-- Bootstrap JS -->
     <script
