--- a/views/login_page.ejs
+++ b/views/login_page.ejs
@@ -25,7 +25,9 @@
     <main style="margin: 1em;">
       <h3>Login</h3>
       <form class="" action="/login" method="POST">
-        <div class="">
+        <div class="container text-left">
+          <div class="row">
+            <div class="col">
           <label for="email">Please Enter Your Email:</label>
           <input
             class="form"
@@ -34,6 +36,8 @@
             placeholder="Email"
             style="width: 300px; margin: 1em"
           />
+          <div class="row">
+            <div class="col">
           <label for="password">Please Enter Your Password:</label>
           <input
             class="form"
@@ -42,6 +46,8 @@
             placeholder="Password"
             style="width: 300px; margin: 1em"
           />
+          <div class="row">
+            <div class="col">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
