--- a/views/dashboard_page.ejs
+++ b/views/dashboard_page.ejs
@@ -27,7 +27,10 @@
         <div class="container text-left">
           <div class="row">
             <div class="col">
-              Camera 1
+              <form method="get" action="/camera2">
+                <label for="logout" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b></b></label>
+                <button type="submit" style="background-color:green; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Live Feed</button>
+              </form>
             </div>
             <div class="col">
               Camera 2
