--- a/views/camera2_page.ejs
+++ b/views/camera2_page.ejs
@@ -5,10 +5,7 @@
   <body>
     <canvas id="bg"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
-    <script type = "module">
-      import { createChair } from './chair1.js';
-      createChair(scene);
+    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script
     </script>
     <script type="text/javascript">
       const scene = new THREE.Scene();
