--- a/views/camera1_page.ejs
+++ b/views/camera1_page.ejs
@@ -12,7 +12,7 @@
       scene.background = new THREE.Color(0xffd17d);
 
       const camera = new THREE.PerspectiveCamera(
-        40,
+        30,
         window.innerWidth / window.innerHeight,
         3,
         1000
@@ -22,9 +22,10 @@
         canvas: document.querySelector("#bg"),
       });
 
+      const halfWidth = window.innerWidth / 2; 
       renderer.setPixelRatio(window.devicePixelRatio);
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      camera.position.setZ(20);
+      renderer.setSize(halfWidth, window.innerHeight);
+      camera.position.setZ(30);
       camera.position.setX(6.5);
       camera.position.setY(10);
 
